--- a/public/css/style.css
+++ b/public/css/style.css
@@ -388,7 +388,7 @@ a:focus {
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgb(0, 142, 137, 0.3)
+    background: rgb(0, 0,0, 0.5)
 ;
     z-index: 1;
 }
@@ -551,8 +551,8 @@ a:focus {
     margin-bottom: 45px;
     padding: 210px 0 90px 0;
     text-align: center;
-    background: linear-gradient(rgb(0, 142, 137, 0.5)
-, rgb(0, 142, 137, 0.5)
+    background: linear-gradient(rgb(0,0, 0 0.5)
+, rgb(0, 0, 0, 0.5)
 ), url(../img/page-header.jpg);
     background-attachment: fixed;
     background-position: center;
@@ -818,7 +818,7 @@ a:focus {
     position: relative;
     width: 100%;
     margin: 45px 0;
-    background: rgb(0, 142, 137, 0.5)
+    background: rgb(0, 0, 0, 0.5)
 ;
 }
 
@@ -1037,7 +1037,7 @@ a:focus {
     margin: 45px 0;
     display: flex;
     align-items: center;
-    background: rgb(0, 142, 137, 0.5)
+    background: rgb(0, 0, 0, 0.5)
 ;
 }
 
@@ -1260,7 +1260,7 @@ a:focus {
     position: relative;
     width: 100%;
     margin: 45px 0;
-    background: rgb(0, 142, 137, 0.5)
+    background: rgb(0, 0, 0, 0.5)
 ;
 }
 
@@ -2210,4 +2210,52 @@ a:focus {
         margin: 5px 0;
         text-align: center;
     }
+}
+/* user page */
+.main-body {
+    padding: 15px;
+}
+.card {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,.1), 0 1px 2px 0 rgba(0,0,0,.06);
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 0 solid rgba(0,0,0,.125);
+    border-radius: .25rem;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1rem;
+}
+
+.gutters-sm {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+
+.gutters-sm>.col, .gutters-sm>[class*=col-] {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
+
+.bg-gray-300 {
+    background-color: #e2e8f0;
+}
+.h-100 {
+    height: 100%!important;
+}
+.shadow-none {
+    box-shadow: none!important;
 }
