--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,8 +19,9 @@ h6 {
 }
 
 a {
-    color: #4a4c70;
+    color: #fff;
     transition: .3s;
+    font-weight: bold;
 }
 
 a:hover,
@@ -302,7 +303,7 @@ a:focus {
         position: absolute;
         width: 100%;
         
-        padding: 20px 60px;
+        padding: 0px 60px;
         background: transparent !important;
         border-bottom: 1px solid rgba(255, 255, 255, .3);
         z-index: 9;
@@ -322,10 +323,13 @@ a:focus {
 !important;
     }
     
-    .navbar a.nav-link {
-        padding: 8px 15px;
+    .navbar .nav-link {
+        padding: 32px 15px 8px;
         font-size: 16px;
         letter-spacing: 1px;
+    }
+    .nav-item .nav-link {
+        padding: 32px 15px 8px !important;
     }
 }
 
